# TeyoClient

./: .gitignore  CMakeLists.txt  CMakePresets.json  MessengerClient.cpp  MessengerClient.sln  MessengerClient.vcxproj  MessengerClient.vcxproj.filters  main.cpp  vcpkg.json  vscode2.bat
include/: authwidget.hpp  chatlistwidget.hpp  chatwidget.hpp  loginwidget.hpp  mainwindow.hpp  messagewidget.hpp  session.hpp  signupwidget.hpp  startwidget.hpp
src/: authwidget.cpp  chatlistwidget.cpp  chatwidget.cpp  client.cpp  loginwidget.cpp  main.cpp  mainwindow.cpp  messagewidget.cpp  oldclient.cpp  session.cpp  signupwidget.cpp  startwidget.cpp
